tests/algorithms/x/Dart/web_programming/slack_message.error
run: exit status 254
../../../tests/algorithms/x/Dart/web_programming/slack_message.dart:67:28: Error: Member not found: 'String.fromJson'.
  String response = String.fromJson(_fetch(slack_url as String));
                           ^^^^^^^^
../../../tests/algorithms/x/Dart/web_programming/slack_message.dart:69:5: Error: Method not found: 'error'.
    error("Request to slack returned an error: " + response);
    ^^^^^
